--- a/www/app/templates/blocks.hbs
+++ b/www/app/templates/blocks.hbs
@@ -11,31 +11,33 @@
   {{#if model.luck}}
     {{partial "luck"}}
   {{/if}}
-  <nav aria-label="Page navigation example">
-    <ul class="pagination">
-      <li class="page-item">
-        {{#active-li currentWhen='blocks.index' role='presentation'}}
-          <a class="page-link">
-            {{#link-to 'blocks.index'}}Blocks <span class="badge alert-success">{{format-number model.maturedTotal}}</span>{{/link-to}}
-          </a>
-        {{/active-li}}
-      </li>
-      <li class="page-item">
-        {{#active-li currentWhen='blocks.immature' role='presentation'}}
-          <a class="page-link">
-            {{#link-to 'blocks.immature'}}Immature <span class="badge alert-success">{{format-number model.immatureTotal}}</span>
-            {{/link-to}}
-          </a>
-        {{/active-li}}
-      </li>
-      <li class="page-item">
-        {{#active-li currentWhen='blocks.pending' role='presentation'}}
-          <a class="page-link">
-            {{#link-to 'blocks.pending'}}New Blocks <span class="badge alert-info">{{format-number model.candidatesTotal}}</span>{{/link-to}}
-          </a>
-        {{/active-li}}
-      </li>
-    </ul>
-    {{outlet}}
-  </nav>
+  <center>
+    <nav aria-label="Page navigation example">
+      <ul class="pagination">
+        <li class="page-item">
+          {{#active-li currentWhen='blocks.index' role='presentation'}}
+            <a class="page-link">
+              {{#link-to 'blocks.index'}}Blocks <span class="badge alert-success">{{format-number model.maturedTotal}}</span>{{/link-to}}
+            </a>
+          {{/active-li}}
+        </li>
+        <li class="page-item">
+          {{#active-li currentWhen='blocks.immature' role='presentation'}}
+            <a class="page-link">
+              {{#link-to 'blocks.immature'}}Immature <span class="badge alert-success">{{format-number model.immatureTotal}}</span>
+              {{/link-to}}
+            </a>
+          {{/active-li}}
+        </li>
+        <li class="page-item">
+          {{#active-li currentWhen='blocks.pending' role='presentation'}}
+            <a class="page-link">
+              {{#link-to 'blocks.pending'}}New Blocks <span class="badge alert-info">{{format-number model.candidatesTotal}}</span>{{/link-to}}
+            </a>
+          {{/active-li}}
+        </li>
+      </ul>
+      {{outlet}}
+    </nav>
+  </center>
 </div>
