--- a/www/app/styles/app.css
+++ b/www/app/styles/app.css
@@ -13,6 +13,14 @@ body {
   color: white;
 }
 
+.list-group-item {
+  position: relative;
+  display: block;
+  padding: .75rem 1.25rem;
+  background-color: #000;
+  border: 1px solid rgba(0, 0, 0, .125);
+}
+
 a {
   color: #b7b7b7;
 }
