--- a/www/app/templates/index.hbs
+++ b/www/app/templates/index.hbs
@@ -47,7 +47,7 @@
   </div>
 </div>
 <div class="row" style="margin: auto; padding-top: 30px">
-  <div class="col-sm-6">
+  <div class="col-sm-12">
     <div class="card">
       <div class="card-body" style="text-align: center;">
         <h5 class="card-title" style="text-align: center;color:#000;">Network Stats:</h5>
@@ -65,12 +65,12 @@
       </div>
     </div>
   </div>
-  <div class="col-sm-6">
+  <div class="col-sm-12">
     <div class="card">
       <div class="card-body" style="text-align: center;">
         <h5 class="card-title" style="text-align: center;color:#000;">Available Ports:</h5>
         <center>
-          <table class="table" style="width: 70%;">
+          <table class="table" style="width: 70%; color:#000;">
             <tr>
               <th class="tg-0lax">Difficulty</th>
               <th class="tg-0lax">Stratum Port</th>
@@ -97,6 +97,17 @@
               <td class="tg-0lax">8812</td>
             </tr>
           </table>
+        </center>
+        <center>
+          <h4> Miner Configs: </h4>
+        </center>
+        <center>
+          <ol class="breadcrumb" style="width: 70%;">
+            <li style="color:#000;">Claymore: -wd 1 -r 1 -epool stratum+tcp://enix.arhash.xyz:8002 -ewal (Address) -eworker (Rig Name) -esm 0 -epsw x -allcoins 1 -asm 1</li>
+          </ol>
+          <ol class="breadcrumb" style="width: 70%;">
+            <li style="color:#000;">Phoenix Miner: -coin eth -pool enix.arhash.xyz:8002 -wal (Address) -rmode 2 -worker (Rig Name)</li>
+          </ol>
         </center>
       </div>
     </div>
