--- a/www/app/templates/index.hbs
+++ b/www/app/templates/index.hbs
@@ -65,28 +65,30 @@
       </div>
     </div>
   </div>
+</div>
+<div class="row" style="margin: auto; padding-top: 30px">
   <div class="col-sm-12">
     <div class="card">
       <div class="card-body" style="text-align: center;">
         <h5 class="card-title" style="text-align: center;color:#000;">Available Ports:</h5>
         <center>
           <table class="table" style="width: 70%; color:#000;">
-            <tr>
+            <tr style="color:#000;">
               <th class="tg-0lax">Difficulty</th>
               <th class="tg-0lax">Stratum Port</th>
               <th class="tg-0lax">Proxy Port</th>
             </tr>
-            <tr>
+            <tr style="color:#000;">
               <td class="tg-0lax">2 Billion</td>
               <td class="tg-0lax">8002</td>
               <td class="tg-0lax">8802</td>
             </tr>
-            <tr>
+            <tr style="color:#000;">
               <td class="tg-0lax">4 Billion</td>
               <td class="tg-0lax">8004</td>
               <td class="tg-0lax">8804</td>
             </tr>
-            <tr>
+            <tr style="color:#000;">
               <td class="tg-0lax">9 Billion</td>
               <td class="tg-0lax">8009</td>
               <td class="tg-0lax">8809</td>
