--- a/www/app/templates/index.hbs
+++ b/www/app/templates/index.hbs
@@ -72,36 +72,36 @@
       <div class="card-body" style="text-align: center;">
         <h5 class="card-title" style="text-align: center;color:#000;">Available Ports:</h5>
         <center>
-          <table class="table" style="width: 70%; color:#000;">
-            <tr style="color:#000;">
-              <th class="tg-0lax">Difficulty</th>
-              <th class="tg-0lax">Stratum Port</th>
-              <th class="tg-0lax">Proxy Port</th>
+          <table class="table" style="width: 70%;">
+            <tr>
+              <th class="tg-0lax" style="color:#000;">Difficulty</th>
+              <th class="tg-0lax" style="color:#000;">Stratum Port</th>
+              <th class="tg-0lax" style="color:#000;">Proxy Port</th>
             </tr>
-            <tr style="color:#000;">
-              <td class="tg-0lax">2 Billion</td>
-              <td class="tg-0lax">8002</td>
-              <td class="tg-0lax">8802</td>
+            <tr>
+              <td class="tg-0lax" style="color:#000;">2 Billion</td>
+              <td class="tg-0lax" style="color:#000;">8002</td>
+              <td class="tg-0lax" style="color:#000;">8802</td>
             </tr>
-            <tr style="color:#000;">
-              <td class="tg-0lax">4 Billion</td>
-              <td class="tg-0lax">8004</td>
-              <td class="tg-0lax">8804</td>
+            <tr>
+              <td class="tg-0lax" style="color:#000;">4 Billion</td>
+              <td class="tg-0lax" style="color:#000;">8004</td>
+              <td class="tg-0lax" style="color:#000;">8804</td>
             </tr>
-            <tr style="color:#000;">
-              <td class="tg-0lax">9 Billion</td>
+            <tr>
+              <td class="tg-0lax" style="color:#000;">9 Billion</td>
               <td class="tg-0lax">8009</td>
               <td class="tg-0lax">8809</td>
             </tr>
             <tr>
-              <td class="tg-0lax">12 Billion</td>
-              <td class="tg-0lax">8012</td>
-              <td class="tg-0lax">8812</td>
+              <td class="tg-0lax" style="color:#000;">12 Billion</td>
+              <td class="tg-0lax" style="color:#000;">8012</td>
+              <td class="tg-0lax" style="color:#000;">8812</td>
             </tr>
           </table>
         </center>
         <center>
-          <h4> Miner Configs: </h4>
+          <h4 style="color:#000;"> Miner Configs: </h4>
         </center>
         <center>
           <ol class="breadcrumb" style="width: 70%;">
@@ -115,49 +115,4 @@
     </div>
   </div>
 </div>
-<!--
-  <center>
-    <h4> Available Ports: </h4>
-  </center>
-  <center>
-    <table class="table" style="width: 70%;">
-      <tr>
-        <th class="tg-0lax">Difficulty</th>
-        <th class="tg-0lax">Stratum Port</th>
-        <th class="tg-0lax">Proxy Port</th>
-      </tr>
-      <tr>
-        <td class="tg-0lax">2 Billion</td>
-        <td class="tg-0lax">8002</td>
-        <td class="tg-0lax">8802</td>
-      </tr>
-      <tr>
-        <td class="tg-0lax">4 Billion</td>
-        <td class="tg-0lax">8004</td>
-        <td class="tg-0lax">8804</td>
-      </tr>
-      <tr>
-        <td class="tg-0lax">9 Billion</td>
-        <td class="tg-0lax">8009</td>
-        <td class="tg-0lax">8809</td>
-      </tr>
-      <tr>
-        <td class="tg-0lax">12 Billion</td>
-        <td class="tg-0lax">8012</td>
-        <td class="tg-0lax">8812</td>
-      </tr>
-    </table>
-  </center>
-  <center>
-    <h4> Miner Configs: </h4>
-  </center>
-  <center>
-    <ol class="breadcrumb" style="width: 70%;">
-      <li style="color:#000;">Claymore: -wd 1 -r 1 -epool stratum+tcp://enix.arhash.xyz:8002 -ewal (Address) -eworker (Rig Name) -esm 0 -epsw x -allcoins 1 -asm 1</li>
-    </ol>
-    <ol class="breadcrumb" style="width: 70%;">
-      <li style="color:#000;">Phoenix Miner: -coin eth -pool enix.arhash.xyz:8002 -wal (Address) -rmode 2 -worker (Rig Name)</li>
-    </ol>
-  </center>
-</div>-->
 <!--<span class="enixus"></span>-->
