--- a/www/app/styles/app.css
+++ b/www/app/styles/app.css
@@ -232,7 +232,7 @@ table, th, td {
   /*padding-left: 50px;
   padding-top: 10px;*/
   padding-bottom: 5px;
-  color: #fff;
+  color: #000;
 }
 
 .tg {
