--- a/www/app/templates/index.hbs
+++ b/www/app/templates/index.hbs
@@ -74,29 +74,29 @@
         <center>
           <table class="table" style="width: 70%;">
             <tr>
-              <th class="tg-0lax" style="color:#000;">Difficulty</th>
-              <th class="tg-0lax" style="color:#000;">Stratum Port</th>
-              <th class="tg-0lax" style="color:#000;">Proxy Port</th>
+              <th class="tg-0lax">Difficulty</th>
+              <th class="tg-0lax">Stratum Port</th>
+              <th class="tg-0lax">Proxy Port</th>
             </tr>
             <tr>
-              <td class="tg-0lax" style="color:#000;">2 Billion</td>
-              <td class="tg-0lax" style="color:#000;">8002</td>
-              <td class="tg-0lax" style="color:#000;">8802</td>
+              <td class="tg-0lax">2 Billion</td>
+              <td class="tg-0lax">8002</td>
+              <td class="tg-0lax">8802</td>
             </tr>
             <tr>
-              <td class="tg-0lax" style="color:#000;">4 Billion</td>
-              <td class="tg-0lax" style="color:#000;">8004</td>
-              <td class="tg-0lax" style="color:#000;">8804</td>
+              <td class="tg-0lax">4 Billion</td>
+              <td class="tg-0lax">8004</td>
+              <td class="tg-0lax">8804</td>
             </tr>
             <tr>
-              <td class="tg-0lax" style="color:#000;">9 Billion</td>
+              <td class="tg-0lax">9 Billion</td>
               <td class="tg-0lax">8009</td>
               <td class="tg-0lax">8809</td>
             </tr>
             <tr>
-              <td class="tg-0lax" style="color:#000;">12 Billion</td>
-              <td class="tg-0lax" style="color:#000;">8012</td>
-              <td class="tg-0lax" style="color:#000;">8812</td>
+              <td class="tg-0lax">12 Billion</td>
+              <td class="tg-0lax">8012</td>
+              <td class="tg-0lax">8812</td>
             </tr>
           </table>
         </center>
