--- a/www/app/templates/index.hbs
+++ b/www/app/templates/index.hbs
@@ -72,7 +72,7 @@
       <div class="card-body" style="text-align: center;">
         <h5 class="card-title" style="text-align: center;color:#000;">Available Ports:</h5>
         <center>
-          <table class="table" style="width: 70%;">
+          <table class="table">
             <tr>
               <th class="tg-0lax">Difficulty</th>
               <th class="tg-0lax">Stratum Port</th>
