--- a/www/app/styles/app.css
+++ b/www/app/styles/app.css
@@ -232,6 +232,10 @@ table, th, td {
   /*padding-left: 50px;
   padding-top: 10px;*/
   padding-bottom: 5px;
+  color: #fff;
+}
+
+.classic {
   color: #000;
 }
 
