--- a/www/app/templates/index.hbs
+++ b/www/app/templates/index.hbs
@@ -71,35 +71,20 @@
     <div class="card">
       <div class="card-body" style="text-align: center;">
         <h5 class="card-title" style="text-align: center;color:#000;">Available Ports:</h5>
-        <center>
-          <table class="classic">
-            <tr>
-              <th class="tg-0lax">Difficulty</th>
-              <th class="tg-0lax">Stratum Port</th>
-              <th class="tg-0lax">Proxy Port</th>
-            </tr>
-            <tr>
-              <td class="tg-0lax">2 Billion</td>
-              <td class="tg-0lax">8002</td>
-              <td class="tg-0lax">8802</td>
-            </tr>
-            <tr>
-              <td class="tg-0lax">4 Billion</td>
-              <td class="tg-0lax">8004</td>
-              <td class="tg-0lax">8804</td>
-            </tr>
-            <tr>
-              <td class="tg-0lax">9 Billion</td>
-              <td class="tg-0lax">8009</td>
-              <td class="tg-0lax">8809</td>
-            </tr>
-            <tr>
-              <td class="tg-0lax">12 Billion</td>
-              <td class="tg-0lax">8012</td>
-              <td class="tg-0lax">8812</td>
-            </tr>
-          </table>
-        </center>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">
+            Difficulty: 2 Billion - Stratum Port: 8002 - Proxy Port: 8802
+          </li>
+          <li class="list-group-item">
+            Difficulty: 4 Billion - Stratum Port: 8004 - Proxy Port: 8804
+          </li>
+          <li class="list-group-item">
+            Difficulty: 9 Billion - Stratum Port: 8009 - Proxy Port: 8809
+          </li>
+          <li class="list-group-item">
+            Difficulty: 12 Billion - Stratum Port: 8012 - Proxy Port: 8812
+          </li>
+        </ul>
         <center>
           <h4 style="color:#000;"> Miner Configs: </h4>
         </center>
