--- a/www/app/templates/index.hbs
+++ b/www/app/templates/index.hbs
@@ -12,7 +12,7 @@
             Minimum Payout Amount: {{config.PayoutThreshold}}
           </li>
           <li class="list-group-item">
-            Pool Payment Method:: PROP
+            Pool Payment Method: PROP
           </li>
           <li class="list-group-item">
             Payout Frequency: 60 Minutes
@@ -53,7 +53,7 @@
         <h5 class="card-title" style="text-align: center;color:#000;">Network Stats:</h5>
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
-            Network Hash Rate:: {{format-hashrate stats.hashrate}}
+            Network Hash Rate: {{format-hashrate stats.hashrate}}
           </li>
           <li class="list-group-item">
             Network Difficulty: {{with-metric-prefix stats.difficulty}}
