--- a/www/app/templates/account.hbs
+++ b/www/app/templates/account.hbs
@@ -12,17 +12,17 @@
           <small>Credited coins awaiting payout.</small>
         </div>
         {{#if model.stats.pending}}
-        <div style="display: block;">
-          <i class="fa fa-clock-o"></i> Previous Payment: <span>{{format-balance model.stats.pending}}</span><br>
-        </div>
+          <div style="display: block;">
+            <i class="fa fa-clock-o"></i> Previous Payment: <span>{{format-balance model.stats.pending}}</span><br>
+          </div>
         {{/if}}
         <div style="display: block;"><i class="fa fa-money"></i> Total Paid: <span>{{format-balance model.stats.paid}}</span></div>
       </div>
       <div class="col-md-4 stats">
         {{#if model.stats.lastShare}}
-        <div style="display: block;"><i class="fa fa-clock-o"></i>
-          Last Share Submitted: <span>{{format-relative (seconds-to-ms (string-to-int model.stats.lastShare))}}</span>
-        </div>
+          <div style="display: block;"><i class="fa fa-clock-o"></i>
+            Last Share Submitted: <span>{{format-relative (seconds-to-ms (string-to-int model.stats.lastShare))}}</span>
+          </div>
         {{/if}}
         <div style="display: block;"><i class="fa fa-gears"></i> Workers Online: <span>{{format-number model.workersOnline}}</span></div>
         <div style="display: block;"><i class="fa fa-tachometer"></i> Hashrate (30m): <span>{{format-hashrate model.currentHashrate}}</span></div>
@@ -32,7 +32,7 @@
         <div style="display: block;"><i class="fa fa-tachometer"></i> Blocks Found: <span>{{format-number model.stats.blocksFound fallback='0'}}</span></div>
         <div style="display: block;"><i class="fa fa-paper-plane-o"></i> Total Payments: <span>{{format-number model.paymentsTotal}}</span> <span class="enixusd"></span></div>
         <div style="display: block;">
-          <i class="fa fa-gears"></i> Your Round Share: <span>{{format-number roundPercent style='percent' maximumFractionDigits='6'}}</span><br/>
+          <i class="fa fa-gears"></i> Your Round Share: <span>{{format-number roundPercent style='percent' maximumFractionDigits='6'}}</span><br />
           <small>This is your percentage of contribution to current round.</small>
         </div>
         <div style="display: block;">
@@ -45,14 +45,24 @@
 </div>
 
 <div class="container">
-  <ul class="nav nav-tabs">
-    {{#active-li currentWhen='account.index' role='presentation'}}
-      {{#link-to 'account.index'}}Workers <span class="badge alert-danger">{{model.workersOffline}}</span>{{/link-to}}
-    {{/active-li}}
-    {{#active-li currentWhen='account.payouts' role='presentation'}}
-      {{#link-to 'account.payouts'}}Payouts{{/link-to}}
-    {{/active-li}}
-  </ul>
+  <nav>
+    <ul class="pagination">
+      <li class="page-item">
+        {{#active-li currentWhen='account.index' role='presentation'}}
+          <a class="page-link">
+            {{#link-to 'account.index'}}Workers <span class="badge alert-danger">{{model.workersOffline}}</span>{{/link-to}}
+          </a>
+        {{/active-li}}
+      </li>
+      <li class="page-item">
+        {{#active-li currentWhen='account.payouts' role='presentation'}}
+          <a class="page-link">
+            {{#link-to 'account.payouts'}}Payouts{{/link-to}}
+          </a>
+        {{/active-li}}
+      </li>
+    </ul>
+  </nav>
 </div>
 
 {{outlet}}
