--- a/www/app/templates/blocks.hbs
+++ b/www/app/templates/blocks.hbs
@@ -12,7 +12,7 @@
     {{partial "luck"}}
   {{/if}}
   <center>
-    <nav aria-label="Page navigation example">
+    <nav>
       <ul class="pagination">
         <li class="page-item">
           {{#active-li currentWhen='blocks.index' role='presentation'}}
