--- a/www/app/templates/account.hbs
+++ b/www/app/templates/account.hbs
@@ -16,7 +16,7 @@
             Pending Balance: {{format-balance model.stats.balance}}
           </li>
           <li class="list-group-item">
-            Previous Payment: {{format-balance model.stats.pending}}
+            Wallet Balance: *Coming Soon*
           </li>
           <li class="list-group-item">
             Total Paid: {{format-balance model.stats.paid}}
@@ -70,6 +70,8 @@
     </div>
   </div>
 </div>
+
+<br>
 
 <div class="container">
   <nav>
